// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GDatePicker.month.js should match snapshot with allowed dates as array 1`] = `
<tbody>
  <tr>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          Jan
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              disabled="disabled"
              class="g-btn g-btn--disabled"
      >
        <div class="g-btn__content">
          Feb
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          Mar
        </div>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              disabled="disabled"
              class="g-btn g-btn--disabled"
      >
        <div class="g-btn__content">
          Apr
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="g-btn g-btn--active"
              style="background-color: rgb(77, 0, 234); border-color: rgb(77, 0, 234);"
      >
        <div class="g-btn__content">
          May
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              disabled="disabled"
              class="g-btn g-btn--disabled"
      >
        <div class="g-btn__content">
          Jun
        </div>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          Jul
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              disabled="disabled"
              class="g-btn g-btn--disabled"
      >
        <div class="g-btn__content">
          Aug
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              disabled="disabled"
              class="g-btn g-btn--disabled"
      >
        <div class="g-btn__content">
          Sep
        </div>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              disabled="disabled"
              class="g-btn g-btn--disabled"
      >
        <div class="g-btn__content">
          Oct
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              disabled="disabled"
              class="g-btn g-btn--disabled"
      >
        <div class="g-btn__content">
          Nov
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              disabled="disabled"
              class="g-btn g-btn--disabled"
      >
        <div class="g-btn__content">
          Dec
        </div>
      </button>
    </td>
  </tr>
</tbody>
`;

exports[`GDatePicker.month.js should match snapshot with colored picker & header 1`] = `
<div class="g-picker">
  <div class="g-picker__title orange darken-1">
    <div class="g-date-picker-title">
      <div class="g-picker__title__btn g-picker__title__btn--active g-date-picker-title__year">
        2005
      </div>
      <div class="g-picker__title__btn g-date-picker-title__date">
        <div name="picker-transition">
          November
        </div>
      </div>
    </div>
  </div>
  <div class="g-picker__body"
       style="width: 290px;"
  >
    <div>
      <div class="g-date-picker-header">
        <div class="g-date-picker-header__value">
          <div name="tab-transition">
            <button type="button">
              2005
            </button>
          </div>
        </div>
        <button class="g-date-picker-header__prev-button">
        </button>
        <button class="g-date-picker-header__next-button">
        </button>
      </div>
      <div class="g-date-picker-table g-date-picker-table--month">
        <table name="tab-transition">
          <tbody>
            <tr>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Jan
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Feb
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Mar
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Apr
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    May
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Jun
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Jul
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Aug
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Sep
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Oct
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Nov
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Dec
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div class="g-picker__actions">
  </div>
</div>
`;

exports[`GDatePicker.month.js should match snapshot with colored picker 1`] = `
<div class="g-picker">
  <div class="g-picker__title orange darken-1">
    <div class="g-date-picker-title">
      <div class="g-picker__title__btn g-picker__title__btn--active g-date-picker-title__year">
        2005
      </div>
      <div class="g-picker__title__btn g-date-picker-title__date">
        <div name="picker-transition">
          November
        </div>
      </div>
    </div>
  </div>
  <div class="g-picker__body"
       style="width: 290px;"
  >
    <div>
      <div class="g-date-picker-header">
        <div class="g-date-picker-header__value">
          <div name="tab-transition">
            <button type="button">
              2005
            </button>
          </div>
        </div>
        <button class="g-date-picker-header__prev-button">
        </button>
        <button class="g-date-picker-header__next-button">
        </button>
      </div>
      <div class="g-date-picker-table g-date-picker-table--month">
        <table name="tab-transition">
          <tbody>
            <tr>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Jan
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Feb
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Mar
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Apr
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    May
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Jun
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Jul
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Aug
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Sep
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Oct
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Nov
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Dec
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div class="g-picker__actions">
  </div>
</div>
`;

exports[`GDatePicker.month.js should match snapshot with month formatting functions 1`] = `
<tbody>
  <tr>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          (01)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          (02)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          (03)
        </div>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          (04)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          (05)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          (06)
        </div>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          (07)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          (08)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          (09)
        </div>
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          (10)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          (11)
        </div>
      </button>
    </td>
    <td>
      <button type="button"
              class="g-btn"
      >
        <div class="g-btn__content">
          (12)
        </div>
      </button>
    </td>
  </tr>
</tbody>
`;

exports[`GDatePicker.month.js should match snapshot with pick-month prop 1`] = `
<div class="g-picker">
  <div class="g-picker__title"
       style="background-color: rgb(77, 0, 234); border-color: rgb(77, 0, 234);"
  >
    <div class="g-date-picker-title">
      <div class="g-picker__title__btn g-picker__title__btn--active g-date-picker-title__year">
        2013
      </div>
      <div class="g-picker__title__btn g-date-picker-title__date">
        <div name="picker-transition">
          May
        </div>
      </div>
    </div>
  </div>
  <div class="g-picker__body"
       style="width: 290px;"
  >
    <div>
      <div class="g-date-picker-header">
        <div class="g-date-picker-header__value">
          <div name="tab-transition">
            <button type="button">
              2013
            </button>
          </div>
        </div>
        <button class="g-date-picker-header__prev-button">
        </button>
        <button class="g-date-picker-header__next-button">
        </button>
      </div>
      <div class="g-date-picker-table g-date-picker-table--month">
        <table name="tab-transition">
          <tbody>
            <tr>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Jan
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Feb
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Mar
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Apr
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    May
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Jun
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Jul
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Aug
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Sep
                  </div>
                </button>
              </td>
            </tr>
            <tr>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Oct
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Nov
                  </div>
                </button>
              </td>
              <td>
                <button type="button"
                        class="g-btn"
                >
                  <div class="g-btn__content">
                    Dec
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div class="g-picker__actions">
  </div>
</div>
`;
